--- a/style.css
+++ b/style.css
@@ -10,32 +10,44 @@
     align-items: center;
     background-color: #1F2937;
     color: white;
+    gap: 5px;
 }
 
 .Top-container{
     display: flex;
+    flex-direction: column;
      background-color: #1F2937; 
      font-family: hero; 
      color: white;
 }
 .beauty{
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
     border: none;
+
 }
 .second-container{
     display: flex;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .photos{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: nowrap;
 
 }
 
 img{
     display: flex;
-    flex-wrap: wrap;
-    width: 100px;
-    height: 120px;
+    height: 95px;
+    width: 65px;
 }
 .third-container{
     display: flex;
@@ -58,12 +70,8 @@ img{
 display: flex;
 background-color: #3882F6;
 padding: 20px;
-width: 350px;
-height: 40px;
-margin-right: 150px;
-margin-left: 150px;
-margin-top: 65px;
-margin-bottom: 65px;
+flex: 1 1 20px;
+
 }
 
 .end{
@@ -79,6 +87,12 @@ margin-bottom: 65px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    max-height: 100vh;
+    width: 60%;
+    justify-content: center;
+    margin: auto;
+    
+    
 
 }
 
@@ -89,6 +103,8 @@ button{
     height: 25px;
     flex-wrap: nowrap;
     color: white;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
