--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ img{
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
+    font-weight: lighter;
     color: #1F2937;
 }
 .author{
@@ -79,6 +80,10 @@ flex: 1 1 20px;
     display: flex;
     background-color: #1F2937;
     color: white;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    font-size: small;
 }
 
 .body{
@@ -92,7 +97,7 @@ flex: 1 1 20px;
     max-height: 100vh;
     width: 60%;
     justify-content: center;
-    margin: auto;
+    margin: 0 20% 0 20%;
     
     
 
