--- a/style.css
+++ b/style.css
@@ -66,13 +66,15 @@ img{
     justify-content: center;
     align-items: center;
     color: white;
+    margin: 4%;
 }
 
 .child{
 display: flex;
+justify-content: center;
+align-items: center;
 background-color: #3882F6;
 padding: 20px;
-flex: 1 1 20px;
 
 }
 
@@ -95,7 +97,6 @@ flex: 1 1 20px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    max-height: 100vh;
     width: 60%;
     justify-content: center;
     margin: 0 20% 0 20%;
