--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
     background-color: #1F2937;
     color: white;
     gap: 5px;
+    flex-wrap: nowrap;
+    
 }
-
 .Top-container{
     display: flex;
     flex-direction: column;
      background-color: #1F2937; 
-     font-family: hero; 
      color: white;
 }
 .beauty{
@@ -33,6 +33,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 4%;
 }
 
 
@@ -49,13 +50,24 @@ img{
     height: 95px;
     width: 65px;
 }
-.third-container{
+.quote{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #E5E7EB;
-    font-size: 36px;
+    font-size: 16px;
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 100;
     color: #1F2937;
+    padding: 6%;
+}
+.quote-txt{
+    display: flex;
+    width: 280px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .author{
     display: flex;
@@ -63,19 +75,27 @@ img{
 }
 .bottom-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
     margin: 4%;
+    flex-wrap: wrap;
 }
 
 .child{
-display: flex;
-justify-content: center;
-align-items: center;
+    display: flex;
 background-color: #3882F6;
 padding: 20px;
-
+}
+.up{
+    align-self: flex-start;
+}
+.child-txt{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -97,7 +117,6 @@ padding: 20px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    width: 60%;
     justify-content: center;
     margin: 0 20% 0 20%;
 
@@ -126,4 +145,5 @@ img{
 a{
     text-decoration: none;
     color: white;
+    flex-wrap: nowrap;
 }
