--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 img{
     display: flex;
     height: 95px;
-    width: 65px;
+    width: 95px;
 }
 .img-one{display: flex;
 flex-direction: column;
@@ -110,12 +110,20 @@ width: 20%;}
     color: white;
     margin: 5%;
     flex-wrap: wrap;
+    font-size: 12px;
 }
 
 .child{
     display: flex;
 background-color: #3882F6;
 padding: 20px;
+}
+.blue-txt{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 60%;
 }
 .up{
     align-self: flex-start;
