--- a/style.css
+++ b/style.css
@@ -6,13 +6,21 @@
 .header{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
     color: white;
-    gap: 5px;
+    gap: 10px;
     flex-wrap: nowrap;
+    font-size: 10px;
+    padding-right: 4%;
+    padding-left: 4%;
     
+    
+}
+.logo{
+    margin-right: auto;
+    font-size: 14px;
 }
 .Top-container{
     display: flex;
@@ -21,6 +29,7 @@
      background-color: #1F2937; 
      color: white;
      padding: 4%;
+     font-size: 12px;
 }
 .top-h{
     display: flex;
@@ -41,6 +50,7 @@
     justify-content: center;
     align-self: flex-end;
     border: none;
+    width: 165px;
 
 }
 .second-container{
