--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 .beauty{
     display: flex;
     justify-content: center;
-    align-self: flex-end;
+    align-self: center;
     border: none;
     width: 165px;
 
@@ -56,10 +56,10 @@
 .second-container{
     display: flex;
     padding: 10px;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 4%;
+    flex-wrap: wrap;
 }
 
 
@@ -68,6 +68,7 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: nowrap;
+    padding: 4%;
 
 }
 
@@ -103,7 +104,7 @@ width: 20%;}
 }
 .quote-txt{
     display: flex;
-    width: 280px;
+    width: 310px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -111,6 +112,8 @@ width: 20%;}
 .author{
     display: flex;
     font-weight: bold;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 .bottom-container{
     display: flex;
@@ -171,6 +174,11 @@ html, body{
 
 .blue{
     border: #E5E7EB solid 1px;
+}
+.bb-box{
+    justify-content: center;
+    align-items: flex-end;
+    margin-left: auto;
 }
 button{
     display: flex;
