--- a/style.css
+++ b/style.css
@@ -187,6 +187,12 @@ button{
     border-radius: 6px;
     border: none;
 }
+button:hover{
+    color: #1F2937;
+}
+button:active{
+    color: #0ed8df;
+}
 img{
     border: #3882F6 solid 3px;
     border-radius: 4px;
@@ -195,4 +201,12 @@ a{
     text-decoration: none;
     color: white;
     flex-wrap: nowrap;
+}
+
+a:hover{
+color: #3882F6;
+}
+
+a:active{
+    color:  #0ed8df; 
 }
