--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
     align-self: center;
     border: none;
     width: 165px;
+    padding-left: 115px;
 }
 .second-container{
     display: flex;
